// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App once loading is complete renders correctly 1`] = `
<div
  data-testid="App"
>
  <header
    data-testid="Header"
  >
    <pre>
      {
  "user": {
    "id": "97406d59-7a49-4f1e-bb79-aba34cfcb405",
    "name": "Test User",
    "email": "test_user@email.com"
  }
}
    </pre>
  </header>
  <main
    style=""
  >
    <p>
      <a
        href="/api/v1/auth/github/authorize"
      >
        Sign in with GitHub
      </a>
    </p>
  </main>
</div>
`;

exports[`App while loading renders correctly 1`] = `
<div
  data-testid="App"
>
  <main
    style="display: none;"
  >
    <p>
      <a
        href="/api/v1/auth/github/authorize"
      >
        Sign in with GitHub
      </a>
    </p>
  </main>
  <div
    data-testid="App__loading"
  >
    Loading...
  </div>
</div>
`;
